<resources>
    <string name="app_name">Pain Tracker</string>
    <string name="submit">Submit</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="reminder_time">Daily reminder time</string>
    <string name="reminder_frequency">Reminder frequency after daily trigger</string>
    <string name="pain_tracker">Pain Tracker</string>
    <string name="log_today">Time to record your pain</string>
    <string name="log_recorded_today">Log recorded for today</string>
    <string name="no_log_today">No log recorded today</string>
    <string name="reminders_enabled">Reminders enabled</string>
    <string name="change_sound">Change sound</string>
    <string name="reset_history">Reset history</string>
    <string name="filter">Filter:</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="pressure">-- hPa</string>
</resources>
